{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 834,
  "lineage": "325d8536-6ee6-5279-861c-d20c83566274",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dc1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "applied_dns_servers": [
              "10.127.1.11"
            ],
            "dns_servers": [
              "10.127.1.11"
            ],
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkInterfaces/hrz-sec-dc1-nic",
            "internal_dns_name_label": "hrz-sec-dc1",
            "internal_domain_name_suffix": "lei4crnujr2ufmz1br3id5cmoe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "hrz-sec-dc1-ip-config",
                "primary": true,
                "private_ip_address": "10.127.1.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/publicIPAddresses/hrz-sec-dc1-eip",
                "subnet_id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/virtualNetworks/security-team-qufi/subnets/security-team-qufi"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-89-44-36",
            "name": "hrz-sec-dc1-nic",
            "private_ip_address": "10.127.1.11",
            "private_ip_addresses": [
              "10.127.1.11"
            ],
            "resource_group_name": "security-team-qufi",
            "tags": {
              "application": "security team",
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Compute/virtualMachines/hrz-sec-dc1-vm"
          },
          "dependencies": [
            "azurerm_public_ip.dc1-eip",
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet",
            "azurerm_virtual_network.network-vnet",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dj1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_servers": [
              "10.127.1.11"
            ],
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkInterfaces/hrz-sec-dj1-nic",
            "internal_dns_name_label": "hrz-sec-dj1",
            "internal_domain_name_suffix": "lei4crnujr2ufmz1br3id5cmoe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "hrz-sec-dj1-ip-config",
                "primary": true,
                "private_ip_address": "10.127.1.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/publicIPAddresses/hrz-sec-dj1-eip",
                "subnet_id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/virtualNetworks/security-team-qufi/subnets/security-team-qufi"
              }
            ],
            "location": "westeurope",
            "name": "hrz-sec-dj1-nic",
            "private_ip_address": "10.127.1.12",
            "private_ip_addresses": [
              "10.127.1.12"
            ],
            "resource_group_name": "security-team-qufi",
            "tags": {
              "application": "security team",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.dj1-eip",
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet",
            "azurerm_virtual_network.network-vnet",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "active-directory-client-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg",
            "location": "westeurope",
            "name": "security-team-dev-client-nsg",
            "resource_group_name": "security-team-qufi",
            "security_rule": [
              {
                "access": "Allow",
                "description": "135-RPC-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "135",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "135-RPC-1-Inbound",
                "priority": 170,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "135-RPC-1-outbound",
                "destination_address_prefix": "10.127.1.12",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "135",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "135-RPC-1-outbound",
                "priority": 170,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "389-LDAP-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "389-LDAP-1-Inbound",
                "priority": 180,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "389-LDAP-1-outbound",
                "destination_address_prefix": "10.127.1.12",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "389-LDAP-1-outbound",
                "priority": 180,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "445-SMB-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "445-SMB-1-Inbound",
                "priority": 190,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "445-SMB-1-outbound",
                "destination_address_prefix": "10.127.1.12",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "445-SMB-1-outbound",
                "priority": 190,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "49152-65535-UDP-DC1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "49152-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "49152-65535-UDP-DC1-Inbound",
                "priority": 210,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "49152-65535-UDP-DC1-outbound",
                "destination_address_prefix": "10.127.1.12",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "49152-65535",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "49152-65535-UDP-DC1-outbound",
                "priority": 210,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "49152-655351-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "49152-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "49152-655351-Inbound",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "49152-655351-outbound",
                "destination_address_prefix": "10.127.1.12",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "49152-65535",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "49152-655351-outbound",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "53-DNS-1-outbound",
                "destination_address_prefix": "10.127.1.12",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "53-DNS-1-outbound",
                "priority": 150,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "53-DNS-udp-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "53-DNS-udp-1-Inbound",
                "priority": 150,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "88-Kerb-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "88",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "88-Kerb-1-Inbound",
                "priority": 160,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "88-Kerb-1-outbound",
                "destination_address_prefix": "10.127.1.12",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "88",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "88-Kerb-1-outbound",
                "priority": 160,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Ping-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Ping-1-Inbound",
                "priority": 220,
                "protocol": "Icmp",
                "source_address_prefix": "10.127.1.12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Ping-1-outbound",
                "destination_address_prefix": "10.127.1.12",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Ping-1-outbound",
                "priority": 220,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "security team-dev-client-sg",
              "description": "NSG for AD Clients"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "active-directory-dc-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg",
            "location": "westeurope",
            "name": "security-team-dev-dc-nsg",
            "resource_group_name": "security-team-qufi",
            "security_rule": [
              {
                "access": "Allow",
                "description": "123-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "123",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "123-1-Inbound",
                "priority": 140,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "123-UDP-1-Outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "123",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "123-UDP-1-Outbound",
                "priority": 140,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "135-RPC-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "135",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "135-RPC-1-Inbound",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "135-RPC-1-outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "135",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "135-RPC-1-outbound",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "137-138-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "137-138",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "137-138-1-Inbound",
                "priority": 160,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "137-138-UDP-1-Outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "137-138",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "137-138-UDP-1-Outbound",
                "priority": 160,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "139-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "139",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "139-1-Inbound",
                "priority": 170,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "139-TCP-1-Outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "139",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "139-TCP-1-Outbound",
                "priority": 170,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "3268-3269-TCP-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3268-3269",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "3268-3269-TCP-1-Inbound",
                "priority": 240,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "389-LDAP-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "389-LDAP-1-Inbound",
                "priority": 180,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "389-LDAP-1-outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "389-LDAP-1-outbound",
                "priority": 180,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "389-UDP-1-Outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "389-UDP-1-Outbound",
                "priority": 190,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "389-udp-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "389-udp-1-Inbound",
                "priority": 190,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "445-SMB-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "445-SMB-1-Inbound",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "445-SMB-1-outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "445-SMB-1-outbound",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "464-Kerb-tcp-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "464",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "464-Kerb-tcp-1-Inbound",
                "priority": 210,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "464-Kerb-udp-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "464",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "464-Kerb-udp-1-Inbound",
                "priority": 220,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "464-TCP-1-Outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "464",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "464-TCP-1-Outbound",
                "priority": 210,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "464-UDP-1-Outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "464",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "464-UDP-1-Outbound",
                "priority": 220,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "49152-65535-UDP-DC1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "49152-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "49152-65535-UDP-DC1-Inbound",
                "priority": 260,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "49152-655351-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "49152-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "49152-655351-Inbound",
                "priority": 250,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "53-DNS-1-outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "53-DNS-1-outbound",
                "priority": 110,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "53-DNS-tcp-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "53-DNS-tcp-1-Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "53-DNS-udp-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "53-DNS-udp-1-Inbound",
                "priority": 110,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "53-TCP-1-Outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "53-TCP-1-Outbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "636-TCP-1-Outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "636",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "636-TCP-1-Outbound",
                "priority": 230,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "636-tcp-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "636",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "636-tcp-1-Inbound",
                "priority": 230,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "88-Kerb-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "88",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "88-Kerb-1-Inbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "88-Kerb-1-outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "88",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "88-Kerb-1-outbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "88-Kerb-udp-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "88",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "88-Kerb-udp-1-Inbound",
                "priority": 130,
                "protocol": "Udp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "88-Kerb-udp-1-outbound",
                "destination_address_prefix": "10.127.1.11",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "88",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "A88-Kerb-udp-1-outbound",
                "priority": 130,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Ping-1-Inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Ping-1-Inbound",
                "priority": 270,
                "protocol": "Icmp",
                "source_address_prefix": "10.127.1.11",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "security team-dev-dc-sg",
              "description": "NSG For AD Domain Controllers"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dc1-vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/hrz-sec-dc1-nsg",
            "location": "westeurope",
            "name": "hrz-sec-dc1-nsg",
            "resource_group_name": "security-team-qufi",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow RDP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow https",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allowhttps",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow ssh",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allowssh",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow wrm",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowWRM",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "security team",
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dj1-vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/hrz-sec-dj1-nsg",
            "location": "westeurope",
            "name": "hrz-sec-dj1-nsg",
            "resource_group_name": "security-team-qufi",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow RDP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow https",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allowhttps",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow ssh",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allowssh",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow wrm",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowWRM",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "security team",
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "icmp_client_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Ping-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/Ping-1-Inbound",
            "name": "Ping-1-Inbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 220,
            "protocol": "Icmp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.12",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "icmp_client_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Ping-1-outbound",
            "destination_address_prefix": "10.127.1.12",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/Ping-1-outbound",
            "name": "Ping-1-outbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 220,
            "protocol": "Icmp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "icmp_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Ping-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/Ping-1-Inbound",
            "name": "Ping-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 270,
            "protocol": "Icmp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_135_client_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "135-RPC-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "135",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/135-RPC-1-Inbound",
            "name": "135-RPC-1-Inbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 170,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.12",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_135_client_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "135-RPC-1-outbound",
            "destination_address_prefix": "10.127.1.12",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "135",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/135-RPC-1-outbound",
            "name": "135-RPC-1-outbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 170,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_135_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "135-RPC-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "135",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/135-RPC-1-Inbound",
            "name": "135-RPC-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 150,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_135_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "135-RPC-1-outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "135",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/135-RPC-1-outbound",
            "name": "135-RPC-1-outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 150,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_139_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "139-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "139",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/139-1-Inbound",
            "name": "139-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 170,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_139_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "139-TCP-1-Outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "139",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/139-TCP-1-Outbound",
            "name": "139-TCP-1-Outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 170,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_3268-3269_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "3268-3269-TCP-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3268-3269",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/3268-3269-TCP-1-Inbound",
            "name": "3268-3269-TCP-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 240,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_389_client_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "389-LDAP-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/389-LDAP-1-Inbound",
            "name": "389-LDAP-1-Inbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 180,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.12",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_389_client_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "389-LDAP-1-outbound",
            "destination_address_prefix": "10.127.1.12",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "389",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/389-LDAP-1-outbound",
            "name": "389-LDAP-1-outbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 180,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_389_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "389-LDAP-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/389-LDAP-1-Inbound",
            "name": "389-LDAP-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 180,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_389_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "389-LDAP-1-outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "389",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/389-LDAP-1-outbound",
            "name": "389-LDAP-1-outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 180,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_445_client_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "445-SMB-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "445",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/445-SMB-1-Inbound",
            "name": "445-SMB-1-Inbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 190,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.12",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_445_client_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "445-SMB-1-outbound",
            "destination_address_prefix": "10.127.1.12",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "445",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/445-SMB-1-outbound",
            "name": "445-SMB-1-outbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 190,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_445_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "445-SMB-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "445",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/445-SMB-1-Inbound",
            "name": "445-SMB-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_445_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "445-SMB-1-outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "445",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/445-SMB-1-outbound",
            "name": "445-SMB-1-outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_464_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "464-Kerb-tcp-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "464",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/464-Kerb-tcp-1-Inbound",
            "name": "464-Kerb-tcp-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 210,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_464_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "464-TCP-1-Outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "464",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/464-TCP-1-Outbound",
            "name": "464-TCP-1-Outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 210,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_49152-65535_client_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "49152-655351-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "49152-65535",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/49152-655351-Inbound",
            "name": "49152-655351-Inbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.12",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_49152-65535_client_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "49152-655351-outbound",
            "destination_address_prefix": "10.127.1.12",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "49152-65535",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/49152-655351-outbound",
            "name": "49152-655351-outbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_49152-65535_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "49152-655351-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "49152-65535",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/49152-655351-Inbound",
            "name": "49152-655351-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 250,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_53_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "53-DNS-tcp-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "53",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/53-DNS-tcp-1-Inbound",
            "name": "53-DNS-tcp-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_53_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "53-TCP-1-Outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "53",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/53-TCP-1-Outbound",
            "name": "53-TCP-1-Outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_636_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "636-tcp-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "636",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/636-tcp-1-Inbound",
            "name": "636-tcp-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 230,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_636_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "636-TCP-1-Outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "636",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/636-TCP-1-Outbound",
            "name": "636-TCP-1-Outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 230,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_88_client_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "88-Kerb-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "88",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/88-Kerb-1-Inbound",
            "name": "88-Kerb-1-Inbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 160,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.12",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_88_client_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "88-Kerb-1-outbound",
            "destination_address_prefix": "10.127.1.12",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "88",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/88-Kerb-1-outbound",
            "name": "88-Kerb-1-outbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 160,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_88_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "88-Kerb-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "88",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/88-Kerb-1-Inbound",
            "name": "88-Kerb-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tcp_88_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "88-Kerb-1-outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "88",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/88-Kerb-1-outbound",
            "name": "88-Kerb-1-outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_123_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "123-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "123",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/123-1-Inbound",
            "name": "123-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 140,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_123_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "123-UDP-1-Outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "123",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/123-UDP-1-Outbound",
            "name": "123-UDP-1-Outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 140,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_137-138_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "137-138-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "137-138",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/137-138-1-Inbound",
            "name": "137-138-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 160,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_137-138_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "137-138-UDP-1-Outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "137-138",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/137-138-UDP-1-Outbound",
            "name": "137-138-UDP-1-Outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 160,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_389_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "389-udp-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/389-udp-1-Inbound",
            "name": "389-udp-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 190,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_389_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "389-UDP-1-Outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "389",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/389-UDP-1-Outbound",
            "name": "389-UDP-1-Outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 190,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_464_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "464-Kerb-udp-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "464",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/464-Kerb-udp-1-Inbound",
            "name": "464-Kerb-udp-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 220,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_464_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "464-UDP-1-Outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "464",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/464-UDP-1-Outbound",
            "name": "464-UDP-1-Outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 220,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_49152-65535_client_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "49152-65535-UDP-DC1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "49152-65535",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/49152-65535-UDP-DC1-Inbound",
            "name": "49152-65535-UDP-DC1-Inbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 210,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.12",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_49152-65535_client_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "49152-65535-UDP-DC1-outbound",
            "destination_address_prefix": "10.127.1.12",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "49152-65535",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/49152-65535-UDP-DC1-outbound",
            "name": "49152-65535-UDP-DC1-outbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 210,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_49152-65535_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "49152-65535-UDP-DC1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "49152-65535",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/49152-65535-UDP-DC1-Inbound",
            "name": "49152-65535-UDP-DC1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 260,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_53_client_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "53-DNS-udp-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "53",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/53-DNS-udp-1-Inbound",
            "name": "53-DNS-udp-1-Inbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 150,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.12",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_53_client_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "53-DNS-1-outbound",
            "destination_address_prefix": "10.127.1.12",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "53",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-client-nsg/securityRules/53-DNS-1-outbound",
            "name": "53-DNS-1-outbound",
            "network_security_group_name": "security-team-dev-client-nsg",
            "priority": 150,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-client-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_53_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "53-DNS-udp-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "53",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/53-DNS-udp-1-Inbound",
            "name": "53-DNS-udp-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 110,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_53_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "53-DNS-1-outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "53",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/53-DNS-1-outbound",
            "name": "53-DNS-1-outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 110,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_88_dc_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "88-Kerb-udp-1-Inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "88",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/88-Kerb-udp-1-Inbound",
            "name": "88-Kerb-udp-1-Inbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 130,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "10.127.1.11",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "udp_88_dc_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "88-Kerb-udp-1-outbound",
            "destination_address_prefix": "10.127.1.11",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "88",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/networkSecurityGroups/security-team-dev-dc-nsg/securityRules/A88-Kerb-udp-1-outbound",
            "name": "A88-Kerb-udp-1-outbound",
            "network_security_group_name": "security-team-dev-dc-nsg",
            "priority": 130,
            "protocol": "Udp",
            "resource_group_name": "security-team-qufi",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.active-directory-dc-nsg",
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dc1-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/publicIPAddresses/hrz-sec-dc1-eip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.211.11.94",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "hrz-sec-dc1-eip",
            "resource_group_name": "security-team-qufi",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "application": "security team",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dj1-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/publicIPAddresses/hrz-sec-dj1-eip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.145.173.254",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "hrz-sec-dj1-eip",
            "resource_group_name": "security-team-qufi",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "application": "security team",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.127.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/virtualNetworks/security-team-qufi/subnets/security-team-qufi",
            "name": "security-team-qufi",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "security-team-qufi",
            "virtual_network_name": "security-team-qufi"
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "azurerm_virtual_network.network-vnet",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.127.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "45e11159-4cb4-4279-b33b-0c7a81fc4c74",
            "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/virtualNetworks/security-team-qufi",
            "location": "westeurope",
            "name": "security-team-qufi",
            "resource_group_name": "security-team-qufi",
            "subnet": [
              {
                "address_prefix": "10.127.1.0/24",
                "id": "/subscriptions/e9ee8090-9784-42d6-9534-bc1d881eeff6/resourceGroups/security-team-qufi/providers/Microsoft.Network/virtualNetworks/security-team-qufi/subnets/security-team-qufi",
                "name": "security-team-qufi"
              }
            ],
            "tags": {
              "application": "security team",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}